--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -29,6 +29,61 @@
     text-align: center;
   }
 
+.tab-content {
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    min-height: 200px;
+  }
+
+.submit-button {
+    display: inline-block;
+    padding: 10px 20px;
+    margin-top: 20px;
+    width: 150px;
+    font-family: 'Orbitron';
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 8px;
+    color: var(--color2);
+    background-color: var(--color4);
+    border: 2px solid var(--color4);
+    transition: background-color 0.3s, transform 0.2s;
+    cursor: pointer;
+  }
+
+.cancel-button {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 20px 0;
+    font-size: 18px;
+    font-family: 'Orbitron';
+    width: 150px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 8px;
+    color: var(--color4);
+    background-color: var(--color2);
+    border: 2px solid var(--color4);
+    transition: background-color 0.3s, transform 0.2s;
+    cursor: pointer;
+  }
+
+.submit-button:hover {
+    background-color: var(--color4);
+  }
+
+.submit-button:active {
+    background-color:  var(--color4);
+    border-color:  var(--color4);
+    transform: scale(0.95);
+  }
+
 @media (max-width: 768px) {
   .header {
       height: 86px;
@@ -42,4 +97,5 @@
   .tabs {
       height: 48px;
     }
+
 }
