--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -2,7 +2,6 @@
     background-color: var(--color1);
     color: var(--color5);
     padding-left: 10px;
-    text-align: center;
     align-items: center;
     display: flex;
   }
@@ -26,18 +25,34 @@
     background-color: var(--color1);
     margin-top: 20px;
     color: var(--color5);
-    text-align: center;
   }
 
 .tab-content {
     padding-top: 20px;
     display: flex;
-    justify-content: center;
     flex-direction: column;
     align-items: center;
-    min-height: 200px;
   }
 
+.input-container {
+    width: 80%;
+    position: relative;
+    margin-bottom: 10px;
+  }
+
+.input-container input[type="text"] {
+    width: 100%;
+    padding: 10px 0 10px 0;
+    font-size: 16px;
+    border: 1px solid var(--color4);;
+    border-radius: 5px;
+    color: white;
+    text-align: center;
+    background-color: var(--color1);;
+  }
+.calendar{
+    max-width: 352px;
+  }
 .submit-button {
     display: inline-block;
     padding: 10px 20px;
@@ -86,7 +101,7 @@
 
 @media (max-width: 768px) {
   .header {
-      height: 86px;
+      height: 76px;
     }
 
   .app-name {
@@ -97,5 +112,13 @@
   .tabs {
       height: 48px;
     }
+
+  .input-container{
+    width: 350px;
+  }
+
+  .input-container input[type="text"]{
+    width: 350px;
+  }
 
 }
