--- a/frontend/src/styles/Info.css
+++ b/frontend/src/styles/Info.css
@@ -1,7 +1,7 @@
 .middle {
     display: flex;
     width: 50%;
-    background-color: var(--color1);
+    /* background-color: var(--color1); */
     margin-left: 25%;
     flex-direction: column;
     justify-content: center;
@@ -130,6 +130,13 @@ input[type="radio"] {
 .continue {
     margin-top:15px;
     margin-bottom: 15px;
+}
+
+.button-container{
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 @media (max-width: 768px) {
