--- a/frontend/src/styles/cards.css
+++ b/frontend/src/styles/cards.css
@@ -6,6 +6,13 @@
     margin-bottom: 20px;
 }
 
+.heading{
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  padding: 25px 0 15px 0;
+}
+
 .line{
   width: 80%;
   border: none;
@@ -15,14 +22,23 @@
 }
 .provider{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    width: 80%;
 }
 
-.input-container {
+.provider div{ 
+  width: 40%;
+  background-color: #7A6292;
+  padding: 8px 16px;
+  font-family: 'Orbitron';
+  border-radius: 5px;
+}
+
+.date-container {
     width: 80%;
     position: relative;
     margin-bottom: 10px;
-    padding: 10px 0 10px 0;
+    padding: 3px 0 3px 0;
     font-size: 16px;
     border: 1px solid var(--color4);
     border-radius: 5px;
@@ -43,5 +59,27 @@
   }
 
 .inner-text {
+    margin: 5px 10px 0 10px ;
     font-size: small;
+    opacity: 0.8;
+  }
+
+  .show-button {
+    display: inline-block;
+    position: absolute;
+    bottom: 5px;
+    padding: 10px 20px;
+    margin: 20px 0;
+    font-size: 18px;
+    font-family: 'Orbitron';
+    width: 80%;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 8px;
+    color: var(--color4);
+    background-color: var(--color2);
+    border: 2px solid var(--color4);
+    transition: background-color 0.3s, transform 0.2s;
+    cursor: pointer;
   }
