--- a/frontend/src/styles/Info.css
+++ b/frontend/src/styles/Info.css
@@ -16,13 +16,14 @@ form{
 .destination {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
+    width: 100%;
     align-items: center;
     margin-top: 10px;
 }
 
 .from, .to, .age, .gender {
-    width: 50%;
+    width: 48%;
 }
 
 .gender {
@@ -34,7 +35,7 @@ form{
 
 select {
     width: 100%;
-    height: 30px;
+    height: 36px;
     border-radius: 5px;
     margin-top: 5px;
     border: 1px solid var(--color4);
@@ -51,13 +52,19 @@ option {
     font-weight:500;
 }
 
+.traveler{
+    width: 100%;
+}
+
 .traveler-name {
     margin-top: 10px;
 }
+
 input[type="text"] , input[type="number"]{
-    width: 100%;
-    height: 30px;
+    width: 96%;
+    height: 24px;
     border-radius: 5px;
+    padding: 5px 8px;
     border: 1px solid var(--color4);
     background-color: var(--color1);
     color: var(--color6);
@@ -85,11 +92,11 @@ input[type="radio"] {
 
 .addPassenger {
     width: 100%;
-    height: 20px;
+    padding: 5px;
     border-radius: 5px;
     margin-top: 20px;
     border: 1px solid var(--color4);
-    background-color: var(--color1);
+    background-color: var(--color2);
     color: var(--color6);
 }
 .addPassenger:hover {
@@ -101,7 +108,7 @@ input[type="radio"] {
 .launchTime {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 .launchTime button {
