--- a/frontend/src/styles/Info.css
+++ b/frontend/src/styles/Info.css
@@ -22,7 +22,14 @@ form{
     margin-top: 10px;
 }
 
-.from, .to, .age, .gender {
+.drop-down {
+    width: 48%;
+}
+
+.gender-radio {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     width: 48%;
 }
 
@@ -91,7 +98,9 @@ input[type="radio"] {
 }
 
 .addPassenger {
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    width: 97%;
     padding: 5px;
     border-radius: 5px;
     margin-top: 20px;
@@ -140,7 +149,7 @@ input[type="radio"] {
 }
 
 .button-container{
-    margin-top: 15px;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
