--- a/frontend/src/styles/cards.css
+++ b/frontend/src/styles/cards.css
@@ -89,3 +89,31 @@
     transition: background-color 0.3s, transform 0.2s;
     cursor: pointer;
   }
+
+  .check-button {
+    display: inline-block;
+    padding: 8px 20px;
+    margin-top: 10px;
+    width: 120px;
+    font-family: 'Orbitron';
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 8px;
+    color: var(--color2);
+    background-color: var(--color4);
+    border: 2px solid var(--color4);
+    transition: background-color 0.3s, transform 0.2s;
+    cursor: pointer;
+  }
+
+.check-button:hover {
+    background-color: var(--color4);
+  }
+
+.check-button:active {
+    background-color:  var(--color4);
+    border-color:  var(--color4);
+    transform: scale(0.95);
+  }
